Remove CSS bloat Improve naming Fix scrollbar

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --text: oklch(23.29% 0.036 66.22);
-    --text-body: oklch(34.00% 0.036 66.22);
+    --text-heading: oklch(23.29% 0.036 66.22);
+    --text: oklch(34.00% 0.036 66.22);
     --background: oklch(100.00% 0.000 89.88);
     --primary: oklch(73.19% 0.186 52.98);
     --secondary: oklch(86.36% 0.054 67.00);
@@ -18,8 +18,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --text: oklch(93.26% 0.027 66.22);
-    --text-body: oklch(83.00% 0.027 66.22);
+    --text-heading: oklch(93.26% 0.027 66.22);
+    --text: oklch(83.00% 0.027 66.22);
     --background: oklch(0.00% 0.000 0.00);
     --primary: oklch(73.19% 0.186 52.98);
     --secondary: oklch(35.19% 0.063 67.00);
@@ -49,16 +49,13 @@ body {
   display: flex;
   flex-direction: column;
 
-  margin: 0;
-
-  color: var(--text-body);
+  color: var(--text);
 }
 
 main {
   width: 80ch;
   /* Some cursedness to bound the width */
   max-width: calc(100% - 2 * var(--margin-primary));
-  min-width: 0ch;
 
   /* Fill the available vertical space to push the footer down */
   flex-grow: 1;
@@ -95,7 +92,7 @@ main {
 }
 
 .maintitle h2 {
-  margin-top: 1%;
+  margin-top: 0.1em;
   border: none;
   font-size: clamp(12px, 4vw, 64px);
   font-weight: 300;
@@ -121,18 +118,18 @@ main {
 h1 {
   font-size: max(3vmax, 24pt);
   border-bottom: 2px solid var(--primary);
-  color: var(--text);
+  color: var(--text-heading);
 }
 
 h2 {
   border-bottom: 2px solid var(--primary);
   margin-bottom: 0.5em;
-  color: var(--text);
+  color: var(--text-heading);
 }
 
 h3 {
   margin-bottom: 0.5em;
-  color: var(--text);
+  color: var(--text-heading);
 }
 
 h4 {
@@ -196,11 +193,12 @@ a:hover {
 
 /* Scroll bars */
 
+::-webkit-scrollbar {
+  width: 10pt;
+}
+
 /* Default scrollbar styles for light mode */
 @media (prefers-color-scheme: light) {
-  ::-webkit-scrollbar {
-    width: 10pt;
-  }
 
   ::-webkit-scrollbar-track {
     background: #f1f1f1;
@@ -214,8 +212,8 @@ a:hover {
     background: #555;
   }
 
+  /* Default scrollbar styles for firefox in light mode */
   * {
-    /* Default scrollbar styles for firefox in light mode */
     scrollbar-color: #888 #f1f1f1;
   }
 }
